tests/invalid/invalid_try_error_type.fg
enum ParseError:
    Empty

struct WrappedError:
    message: String

fn parse_digit() -> Int!ParseError:
    fail ParseError.Empty

fn main() -> Int!WrappedError:
    parse_digit()!
    return 0
